v0.14.0/_sources/projections/nongeo/cartesian_linear.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/nongeo/cartesian_linear.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_projections_nongeo_cartesian_linear.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_nongeo_cartesian_linear.py:


Cartesian linear
================

**X**\ *width*\ [/*height*] or **x**\ *x-scale*\ [/*y-scale*]

Give the *width* of the figure and the optional *height*. The lower-case version
**x** is similar to **X** but expects an *x-scale* and an optional *y-scale*.

The Cartesian linear projection is primarily designed for regular floating point
data. To plot geographical data in a linear projection, see the upstream GMT
documentation :gmt-docs:`Geographic coordinates
<reference/coordinate-transformations.html#geographic-coordinates>`.
To make the linear plot using calendar date/time as input coordinates, see the
tutorial :doc:`Plotting datetime charts </tutorials/advanced/date_time_charts>`.
GMT documentation :gmt-docs:`Calendar time coordinates
<reference/coordinate-transformations.html#calendar-time-coordinates>`.

.. GENERATED FROM PYTHON SOURCE LINES 21-31



.. image-sg:: /projections/nongeo/images/sphx_glr_cartesian_linear_001.png
   :alt: cartesian linear
   :srcset: /projections/nongeo/images/sphx_glr_cartesian_linear_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    import pygmt

    fig = pygmt.Figure()
    # The region parameter is specified as x_min, x_max, y_min, y_max
    fig.basemap(region=[0, 10, 0, 50], projection="X15c/10c", frame=["afg", "+gbisque"])
    fig.plot(x=[3, 9, 2], y=[4, 9, 37], pen="2p,black")
    # Plot data points on top of the line
    # Use squares with a size of 0.3 centimeters, an "orange" fill and a "black" outline
    fig.plot(x=[3, 9, 2], y=[4, 9, 37], style="s0.3c", fill="orange", pen="black")
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.149 seconds)


.. _sphx_glr_download_projections_nongeo_cartesian_linear.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: cartesian_linear.ipynb <cartesian_linear.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: cartesian_linear.py <cartesian_linear.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: cartesian_linear.zip <cartesian_linear.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
